src/objects/Metric__c.object
<CustomObject>
    <fields>
        <fullName>COScoreId__c</fullName>
        <label>CO Score Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Feed__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CO Feed</label>
        <referenceTo>CO_Feed__c</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Metrics</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cheerful_Raw__c</fullName>
        <label>Cheerful Raw</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheerful__c</fullName>
        <formula>IF(
OR(
 AND (TEXT( Feedback_Type__c )=&apos;Direct Report&apos;,  (CO_Feed__r.Count_Of_Direct_Reports__c &lt; 3) ),
 AND (TEXT( Feedback_Type__c )=&apos;Indirect Report&apos;,  (CO_Feed__r.Count_Of_Indirect_Reports__c &lt;3) ),
 AND (TEXT( Feedback_Type__c )=&apos;Overall&apos;, (CO_Feed__r.Count_Of_All_Raters__c &lt; 3) ),
 AND (TEXT( Feedback_Type__c )=&apos;All Collaborator&apos;,  (CO_Feed__r.Count_Of_All_Collaborators__c &lt; 3) )

),
0,
Cheerful_Raw__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheerful</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <formula>Ratee__r.FirstName &amp; &quot; &quot; &amp; Ratee__r.LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engaged_Raw__c</fullName>
        <label>Engaged Raw</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engaged__c</fullName>
        <formula>IF(
OR(
 AND (TEXT( Feedback_Type__c )=&apos;Direct Report&apos;,  (CO_Feed__r.Count_Of_Direct_Reports__c &lt; 3) ),
 AND (TEXT( Feedback_Type__c )=&apos;Indirect Report&apos;,  (CO_Feed__r.Count_Of_Indirect_Reports__c &lt;3) ),
 AND (TEXT( Feedback_Type__c )=&apos;Overall&apos;, (CO_Feed__r.Count_Of_All_Raters__c &lt; 3) ),
 AND (TEXT( Feedback_Type__c )=&apos;All Collaborator&apos;,  (CO_Feed__r.Count_Of_All_Collaborators__c &lt; 3) )

),
0,
Engaged_Raw__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engaged</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback_Type__c</fullName>
        <label>Feedback Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Collaborator</fullName>
                </value>
                <value>
                    <fullName>Collaborator</fullName>
                </value>
                <value>
                    <fullName>Direct Report</fullName>
                </value>
                <value>
                    <fullName>Indirect Report</fullName>
                </value>
                <value>
                    <fullName>Functional Manager</fullName>
                </value>
                <value>
                    <fullName>Matrix Manager</fullName>
                </value>
                <value>
                    <fullName>Overall</fullName>
                </value>
                <value>
                    <fullName>Other Collaborator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Precise_Agile_Transparent__c</fullName>
        <formula>IF(
OR(
 AND (TEXT( Feedback_Type__c )=&apos;Direct Report&apos;,  (CO_Feed__r.Count_Of_Direct_Reports__c &lt; 3) ),
 AND (TEXT( Feedback_Type__c )=&apos;Indirect Report&apos;,  (CO_Feed__r.Count_Of_Indirect_Reports__c &lt;3) ),
 AND (TEXT( Feedback_Type__c )=&apos;Overall&apos;, (CO_Feed__r.Count_Of_All_Raters__c &lt; 3) ),
 AND (TEXT( Feedback_Type__c )=&apos;All Collaborator&apos;,  (CO_Feed__r.Count_Of_All_Collaborators__c &lt; 3) )

),
0,
Precise_Raw__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precise, Agile &amp; Transparent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Precise_Raw__c</fullName>
        <label>Precise Raw</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>text(CO_Feed__r.Quarter__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ratee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Raters__c</fullName>
        <formula>IF(ISPICKVAL(Feedback_Type__c, &quot;All Collaborator&quot;),CO_Feed__r.No_Of_All_Collaborators__c, 
IF(ISPICKVAL(Feedback_Type__c, &quot;Collaborator&quot;), CO_Feed__r.No_Of_Collaborators__c , 
IF(ISPICKVAL(Feedback_Type__c, &quot;Direct Report&quot;), CO_Feed__r.No_Of_Direct_Reports__c , 
IF(ISPICKVAL(Feedback_Type__c, &quot;Indirect Report&quot;),CO_Feed__r.No_Of_Indirect_Reports__c, 
IF(ISPICKVAL(Feedback_Type__c, &quot;Functional Manager&quot;),CO_Feed__r.No_Of_Functional_Manager__c, 
IF(ISPICKVAL(Feedback_Type__c, &quot;Matrix Manager&quot;),CO_Feed__r.No_Of_Matrix_Manager__c, 
IF(ISPICKVAL(Feedback_Type__c, &quot;Other Collaborator&quot;),CO_Feed__r.No_Of_Other_Collaborators__c, 
IF(ISPICKVAL(Feedback_Type__c, &quot;Overall&quot;),(CO_Feed__r.No_Of_All_Collaborators__c + CO_Feed__r.No_Of_Direct_Reports__c + CO_Feed__r.No_Of_Indirect_Reports__c + CO_Feed__r.No_Of_Functional_Manager__c + CO_Feed__r.No_Of_Matrix_Manager__c), 
0 
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Count of users who provided rating</inlineHelpText>
        <label># Raters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Raters__c</fullName>
        <description>Count of total raters</description>
        <formula>IF(ISPICKVAL(Feedback_Type__c, &quot;All Collaborator&quot;),CO_Feed__r.Count_Of_All_Collaborators__c,
IF(ISPICKVAL(Feedback_Type__c, &quot;Collaborator&quot;), CO_Feed__r.Count_Of_Direct_Collaborators__c ,
IF(ISPICKVAL(Feedback_Type__c, &quot;Other Collaborator&quot;), CO_Feed__r.Count_Of_Indirect_Collaborators__c ,
IF(ISPICKVAL(Feedback_Type__c, &quot;Direct Report&quot;), CO_Feed__r.Count_Of_Direct_Reports__c ,
IF(ISPICKVAL(Feedback_Type__c, &quot;Indirect Report&quot;),CO_Feed__r.Count_Of_Indirect_Reports__c,
IF(ISPICKVAL(Feedback_Type__c, &quot;Functional Manager&quot;),CO_Feed__r.Count_of_Functional_Manager__c,
IF(ISPICKVAL(Feedback_Type__c, &quot;Matrix Manager&quot;),CO_Feed__r.Count_Of_Matrix_Manager__c,
IF(ISPICKVAL(Feedback_Type__c, &quot;Overall&quot;),CO_Feed__r.Count_Of_All_Raters_F__c,
0
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Total Raters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Metric</label>
    <nameField>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>